# rust-web-pos

./: README.md
fastfood_pos/: Cargo.toml
fastfood_pos/public/: app.js  index.html  styles.css
fastfood_pos/src/: lib.rs  main.rs
fastfood_pos/src/web/: app.rs  data.rs
