[package]
name = "fastfood_pos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

[dev-dependencies]
http = "1.1" # For HTTP types in tests
